# documenter

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish-pypi.yml
src/documenter/: __init__.py
