[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "documenter"
version = "0.1.0.dev0"
authors = [{ name = "xystudio", email = "173288240@qq.com" }]
description = "Easy to load a markdown document and show it."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
keywords = ["load document", "document", "documenter", "markdown"]
[project.optional-dependencies]
dev = []
[project.scripts]
documenter = "documenter:main"
[tool.setuptools.package-dir]
documenter = "src/documenter"
